--- a/client/style.css
+++ b/client/style.css
@@ -248,3 +248,9 @@ body {
 .contact-columns > div {
     text-align: left;
 }
+
+#contactSearchResult {
+    display: block;        
+    min-height: 1.2rem; 
+    margin-top: 0.5rem;
+}
