--- a/client/style.css
+++ b/client/style.css
@@ -183,6 +183,7 @@ body {
     transform: scale(1.1); /* grow by 10% */
 }
 
+/* css for Add contact -----------------------------*/
 .add-contact {
     display: none;
     margin-top: 1.5rem;
@@ -224,6 +225,8 @@ body {
     border-radius: 10px;
 }
 
+/*---------------------------------------------------*/
+/* css for contacts grid ----------------------------*/
 .contact-columns {
     background-color: #c8cacc;
     padding: 1rem;
@@ -277,3 +280,46 @@ body {
 .delete-button:hover {
     background-color: #ffebee; /* Light red on hover */
 }
+
+/*---------------------------------------------------*/
+/*css for Modal------------------------------------- */
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+}
+
+.modal-content {
+    background-color: white;
+    margin: 10% auto;
+    padding: 20px;
+    border-radius: 8px;
+    width: 400px;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.3);
+}
+
+.modal-content input {
+    display: block;
+    width: 100%;
+    margin: 10px 0;
+    padding: 10px;
+}
+
+.close {
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close:hover {
+    color: red;
+}
+
+/*---------------------------------------------------*/
