--- a/client/style.css
+++ b/client/style.css
@@ -9,9 +9,8 @@ html {
 
 :root {
     --bg-main: #ede6df;
-    /*--bg-card: #094044;
-    --bg-inner-card: #091d26;*/
-        --bg-image: url("../images/sunset-beach.jpg");
+    /--bg-card: #094044;
+    --bg-inner-card: #091d26;
 
     --text-navbar: #ede6df;
     --text-title: #091d26;
@@ -30,12 +29,9 @@ html {
 }
 
 [data-theme="alternate1"] {
-    /*--bg-main: #ffffff;
+    --bg-main: #ffffff;
     --bg-card: rgb(255, 255, 255);
-    --bg-inner-card: rgba(37, 55, 39, 0.96);*/
-
-    --bg-main:#ffffff;
-    --bg-image: url("../images/sunset-beach.jpg");
+    --bg-inner-card: rgba(37, 55, 39, 0.96);
 
     --text-navbar: #000000;
     --text-title: #222222;
@@ -55,9 +51,8 @@ html {
 
 [data-theme="alternate2"] {
     --bg-main: #000000;
-    /*--bg-card: #fff6ee;
-    --bg-inner-card: rgba(183, 167, 255, 0.91);*/
-        --bg-image: url("../images/sunset-beach.jpg");
+    --bg-card: #fff6ee;
+    --bg-inner-card: rgba(183, 167, 255, 0.91);
 
     --text-navbar: #000000;
     --text-title: #ffffff;
@@ -88,7 +83,7 @@ html {
 
 body {
     font-family: Arial, sans-serif;
-    background: var(--bg-image);
+    background: var(--bg-main);
     display: flex;
     justify-content: center;
     align-items: center;
